# rpma-rust1

./: .editorconfig  .gitignore  AGENTS.md  API.md  CLAUDE.md  CORRELATION_AUDIT_COMPLETE.md  Cargo.toml  Cargo.toml.backup  DEPLOYMENT.md  DESIGNV2.md  GEMINI.md  Makefile  README.md  TESTING_AUDIT.md  TESTING_GUIDELINES.md  TESTING_PROGRESS.md  TEST_AUDIT_SUMMARY.md  TEST_COMPLETE_GUIDE.md  TEST_COVERAGE_SUMMARY.md  TEST_HEALTH_REPORT.md  TEST_IMPLEMENTATION_SUMMARY.md  TEST_MAP.md  USER-FLOWS.md  _refactor_patch.diff  _tmp_frontend_api_routes.txt  _tmp_frontend_files.txt  _tmp_frontend_tsx.txt  _tmp_ipc_commands.txt  _tmp_src_tauri_files.txt  commitlint.config.js  deny.toml  instruction.md  ipc-gate-output.txt  log-txt.md  package-lock.json  package.json  tsconfig.json
src-tauri/: .gitignore  Cargo.toml  build.rs  deny.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/benches/: audit_benchmarks.rs  intervention_benchmarks.rs  task_benchmarks.rs
src-tauri/bindings/: ApiError.ts  ApiResponse.ts  AuditActivityFilter.ts  BulkImportResponse.ts  ChangePasswordRequest.ts  ClientStat.ts  ClientStats.ts  CreateInventoryTransactionRequest.ts  CreateMaterialCategoryRequest.ts  CreateMaterialRequest.ts  CreateNotificationRequest.ts  CreateQuoteRequest.ts  CreateSupplierRequest.ts  DeviceInfo.ts  EntityCountsResponse.ts  EntityType.ts  FilmType.ts  GetNotificationsResponse.ts  HealthStatus.ts  Intervention.ts  InterventionManagementResponse.ts  InterventionMaterialSummary.ts  InterventionProgress.ts  InterventionProgressResponse.ts  InterventionStats.ts  InterventionStatus.ts  InterventionStep.ts  InterventionType.ts  InterventionWorkflowState.ts  InventoryDashboardData.ts  InventoryMovementSummary.ts  InventoryStats.ts  InventoryTransaction.ts  InventoryTransactionTS.ts  InventoryTransactionType.ts  IssueSeverity.ts  LightingCondition.ts  LowStockMaterial.ts  LowStockMaterialsResponse.ts  Material.ts  (+57 more)
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 002_rename_ppf_zone.sql  003_add_client_stats_triggers.sql  004_add_task_client_index.sql  005_add_task_indexes.sql  006_add_step_location_columns.sql  007_add_user_consent.sql  008_add_workflow_constraints.sql  009_add_task_number_to_interventions.sql  010_fix_task_statuses.sql  011_prevent_duplicate_interventions.sql  012_add_material_tables.sql  013_add_suppliers_table.sql  014_add_avatar_url.sql  015_add_two_factor_auth.sql  016_add_task_assignment_indexes.sql  017_add_cache_metadata.sql  018_add_settings_audit_log.sql  019_enhanced_performance_indexes.sql  020_fix_cache_metadata_schema.sql  021_add_client_statistics_view.sql  022_add_task_history_table.sql  023_add_messaging_tables.sql  024_add_inventory_management.sql  025_add_analytics_dashboard.sql  026_fix_user_settings.sql  027_add_task_constraints.sql  027_user_settings_trigger.sql  028_add_two_factor_user_columns.sql  031_add_inventory_non_negative_checks.sql  032_add_intervention_task_fk.sql  033_add_task_workflow_fks.sql  034_add_session_activity_index.sql  035_add_tasks_deleted_at_index.sql  036_core_screen_indexes.sql  038_inventory_transaction_lookup_index.sql  039_add_fk_indexes.sql  040_add_activity_and_reference_indexes.sql  041_replace_user_sessions_with_sessions.sql  042_fix_client_statistics_view.sql  043_add_parent_id_index.sql  (+23 more)
src-tauri/src/: batching.rs  boundary_tests.rs  ipc_serialization.rs  lib.rs  main.rs  memory_management.rs  memory_management_helpers.rs  service_builder.rs  smoke_tests.rs  test_utils.rs  worker_pool.rs
src-tauri/src/commands/: analytics.rs  auth.rs  auth_middleware.rs  calendar.rs  client.rs  compression.rs  correlation_helpers.rs  error_utils.rs  errors.rs  ipc_optimization.rs  log.rs  material.rs  message.rs  mod.rs  navigation.rs  notification.rs  performance.rs  queue.rs  quote.rs  reports_tests.rs  security.rs  settings_tests.rs  status.rs  streaming.rs  sync.rs  system.rs  task_types.rs  ui.rs  user.rs  websocket.rs  websocket_commands.rs
src-tauri/src/db/: connection.rs  import.rs  metrics.rs  migrations.rs  mod.rs  operation_pool.rs  queries.rs  schema.sql  utils.rs
src-tauri/src/domains/: audit.rs  auth.rs  calendar.rs  clients.rs  interventions.rs  inventory.rs  mod.rs  reports.rs  settings.rs  sync.rs  users.rs
src-tauri/src/logging/: correlation.rs  middleware.rs  mod.rs
src-tauri/src/menu/: events.rs  mod.rs
src-tauri/src/models/: auth.rs  calendar.rs  calendar_event.rs  client.rs  common.rs  intervention.rs  material.rs  material_ts.rs  message.rs  mod.rs  notification.rs  photo.rs  quote.rs  reports.rs  settings.rs  status.rs  status_tests.rs  step.rs  sync.rs  task.rs  user.rs
src-tauri/src/repositories/: audit_repository.rs  base.rs  cache.rs  calendar_event_repository.rs  client_repository.rs  dashboard_repository.rs  factory.rs  intervention_repository.rs  material_repository.rs  message_repository.rs  mod.rs  notification_preferences_repository.rs  notification_repository.rs  photo_repository.rs  quote_repository.rs  session_repository.rs  task_history_repository.rs  task_repository.rs  task_repository_streaming.rs  user_repository.rs
src-tauri/src/services/: alerting.rs  analytics.rs  audit_log_handler.rs  audit_service.rs  auth.rs  cache.rs  calendar.rs  calendar_event_service.rs  client.rs  client_queries.rs  client_statistics.rs  client_task_integration.rs  client_validation.rs  consent.rs  dashboard.rs  document_storage.rs  domain_event.rs  event_bus.rs  event_system.rs  (+48 more)
src-tauri/tests/: auth_service_tests.rs  client_service_tests.rs  core_auth_tests.rs  domain_invariants.rs  harness_smoke_test.rs  integration.rs  integration_tests.rs  intervention_lifecycle_e2e_test.rs  intervention_service_tests.rs  inventory_event_integration.rs  inventory_intervention_event_integration.rs  ipc_commands_tests.rs  mod.rs  notification_integration_test.rs  quote_task_inventory_e2e_test.rs  report_generation_tests.rs  search_tests.rs  security_penetration_tests.rs  session_rbac_expiry_e2e_test.rs  task_service_tests.rs  task_update_persistence_tests.rs
(+3308 files in other folders)
