[package]
name = "rpma-ppf-intervention"
version = "0.1.0"
description = "Application desktop de gestion d'interventions PPF"
authors = ["RPMA Team"]
license = "MIT"
repository = "https://github.com/your-org/rpma-v2"
edition = "2021"
rust-version = "1.85"
default-run = "main"

[lib]
name = "rpma_ppf_intervention"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "export-types"
path = "src/bin/export-types.rs"
required-features = ["export-types"]


[[bench]]
name = "task_benchmarks"
harness = false

[[bench]]
name = "intervention_benchmarks"
harness = false

[[bench]]
name = "audit_benchmarks"
harness = false


# ── Command-level tests ────────────────────────────────────────────────────────

[[test]]
name = "auth_commands_test"
path = "tests/commands/auth_commands_test.rs"

[[test]]
name = "client_commands_test"
path = "tests/commands/client_commands_test.rs"

[[test]]
name = "user_commands_test"
path = "tests/commands/user_commands_test.rs"

[[test]]
name = "intervention_commands_test"
path = "tests/commands/intervention_commands_test.rs"

[[test]]
name = "task_commands_test"
path = "tests/commands/task_commands_test.rs"

[[test]]
name = "ipc_contract_test"
path = "tests/commands/ipc_contract_test.rs"

[[test]]
name = "golden_flows_test"
path = "tests/commands/golden_flows_test.rs"

[[test]]
name = "quote_commands_test"
path = "tests/commands/quote_commands_test.rs"

[[test]]
name = "inventory_commands_test"
path = "tests/commands/inventory_commands_test.rs"


# ── End-to-end tests ───────────────────────────────────────────────────────────

[[test]]
name = "intervention_lifecycle_e2e_test"
path = "tests/intervention_lifecycle_e2e_test.rs"

[[test]]
name = "quote_task_inventory_e2e_test"
path = "tests/quote_task_inventory_e2e_test.rs"

[[test]]
name = "session_rbac_expiry_e2e_test"
path = "tests/session_rbac_expiry_e2e_test.rs"


# ── Harness ────────────────────────────────────────────────────────────────────

[[test]]
name = "harness_smoke_test"
path = "tests/harness_smoke_test.rs"

# Point d'entrée principal du harness — référencé dans CLAUDE.md
# Commande : cd src-tauri && cargo test --test integration -- --nocapture
[[test]]
name = "integration"
path = "tests/integration.rs"

# Domain invariant tests — service-layer enforcement of all business rules
# Commande : cd src-tauri && cargo test --test domain_invariants -- --nocapture
[[test]]
name = "domain_invariants"
path = "tests/domain_invariants.rs"


[build-dependencies]
tauri-build = { version = "2.0", features = [] }


[dependencies]
tauri = { version = "2.1", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
# Note: For full SQLCipher encryption, replace with sqlcipher-compatible rusqlite
# rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
thiserror = "1.0"
regex = "1.11"
open = "5.3"
lazy_static = "1.5"
include_dir = "0.7"

# Efficient locking primitives
parking_lot = "0.12"

# System information for memory monitoring
sysinfo = "0.30"

# Futures utilities for async streams
futures = "0.3"

# CPU core detection
num_cpus = "1.16"

# PDF generation
genpdf = "0.2"
headless_chrome = "1.0"

# Directory operations
dirs = "5.0"

# File system operations
fs2 = "0.4"

# Async runtime
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
async-trait = "0.1"

# WebSocket support
tokio-tungstenite = "0.21"
futures-util = "0.3"
async-stream = "0.3"

# Password hashing
argon2 = { version = "0.5", features = ["std"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# HTTP client for external APIs (email/SMS services)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rand = "0.8"
dotenvy = "0.15"

# Type generation
ts-rs = { version = "10.1", features = ["no-serde-warnings"] }

# Utilities
md5 = "0.7"

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# PDF generation
printpdf = "0.7"

# Geospatial operations
geo = "0.28"


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
sqlcipher = []        # Optional feature for SQLCipher encryption support
export-types = []     # Opens domain visibility for the export-types binary (ts-rs)
legacy-tests = []     # Enable legacy integration/performance/proptest modules
perf-monitoring = []  # Enable DB persistence of command performance metrics (disabled by default in release)


[dev-dependencies]
# Async runtime — test-util gives access to tokio::test and time control
tokio = { version = "1", features = ["test-util"] }

# Testing framework
tokio-test = "0.4"
mockall = "0.12"          # Mocking framework
tempfile = "3.8"          # Temp database files when needed
serial_test = "3.0"       # Test isolation for shared-state tests
criterion = "0.5"         # Performance benchmarking
proptest = "1.4"          # Property-based testing
pretty_assertions = "1.4" # Readable assertion diffs in test output

# Note: cargo-tarpaulin is a CLI tool, not a library crate.
# Install once with: cargo install cargo-tarpaulin
# Then run: cargo tarpaulin --out Html
